// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package xfa.icon.actions.proto;

message WaitForSettlingActionFixedParams {
  // The uncertainty value below which the `WaitForSettlingAction` is considered
  // settled and done. Must be in range [0.01, 0.5]. Default is 0.2.
  optional double uncertainty_threshold = 1;
}
